fix gallery gap and other small  fix

--- a/css/events.css
+++ b/css/events.css
@@ -9,7 +9,10 @@
 }
 
 .events__list {
-  display: flex;
+  /* display: flex;
+  gap: 50px; */
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
   gap: 50px;
 }
 .events__item--image {
@@ -57,9 +60,10 @@
   margin-bottom: 10px;
 }
 
-.events__list .events__item:first-child .event__name .event__name--secect {
+/* TODO:осторожно не изменять ширину родителя */
+/* .events__list .events__item:first-child .event__name .event__name--secect {
   white-space: nowrap;
-}
+} */
 
 .event__descr {
   font-size: 16px;
