--- a/css/media/768.css
+++ b/css/media/768.css
@@ -65,7 +65,8 @@
   }
 
   .events__list {
-    flex-direction: column;
+    /* flex-direction: column; */
+    grid-template-columns: 1fr;
     gap: 30px;
   }
 
