--- a/css/showroom.css
+++ b/css/showroom.css
@@ -11,7 +11,6 @@
   align-items: center;
 }
 
-
 .showroom__title {
   font-size: 24px;
   font-weight: 600;
@@ -47,14 +46,15 @@
   color: var(--red);
 }
 
-.showroom__center--label:has(.showroom__center--input:invalid:placeholder-shown)::before {
+.showroom__center--label:has(
+    .showroom__center--input:invalid:placeholder-shown
+  )::before {
   opacity: 0;
 }
 
 .showroom__center--label:has(.showroom__center--input:invalid)::before {
   opacity: 1;
 }
-
 
 .showroom__center--label input:hover,
 .showroom__center--label input:focus-visible {
@@ -76,8 +76,6 @@
 .showroom__center--input:invalid {
   border: 1px solid red;
 }
-
-
 
 .showroom__center--input:not(:focus):invalid:placeholder-shown,
 .showroom__center--input:not(:focus-visible):invalid:placeholder-shown {
@@ -150,8 +148,8 @@
 }
 
 .showroom__social--img:hover,
-.showroom__social--img:focus-visible{
- opacity: .5;
+.showroom__social--img:focus-visible {
+  opacity: 0.5;
 }
 
 .showroom__social--img:active {
